--- a/pom.xml
+++ b/pom.xml
@@ -49,5 +49,10 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib</artifactId>
+			<version>3.1</version>
+		</dependency>
 	</dependencies>	
 </project>
